syntax = "proto3";

option go_package="./";

package crud;

service CrudService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message CreateRequest {
    string name = 1;
    string age = 2;
}

message CreateResponse {
    string id = 1;
}

message ReadRequest {
    string id = 1;
}

message ReadResponse {
    string name = 1;
    string age = 2;
}

message UpdateRequest {
    string id = 1;
    string name = 2;
    string age = 3;
}

message UpdateResponse {
    bool success = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    bool success = 1;
}
